--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "@gsap/react": "^2.1.1",
     "@react-three/drei": "^9.114.3",
     "@react-three/fiber": "^8.17.10",
+    "@sentry/cli": "^2.37.0",
+    "@sentry/react": "^8.34.0",
+    "@sentry/vite-plugin": "^2.22.5",
+    "firebase": "^10.14.1",
     "gsap": "^3.12.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
